<resources>
    <string name="statistics_table">Tabla General</string>
    <string name="games_played">JJ</string>
    <string name="score_diff">DG</string>
    <string name="points">PTS</string>
    <string name="player_details">FICHA TÉCNICA</string>
    <string name="name">NOMBRE(p)</string>
    <string name="position">POSICIÓN(p)</string>
    <string name="birthdate">FECHA DE NACIMIENTO</string>
    <string name="birthplace">LUGAR DE NACIMIENTO</string>
    <string name="weight">PESO</string>
    <string name="height">ALTURA</string>
    <string name="last_team">EQUIPO ANTERIOR</string>
    <string name="app_name">Venados F.C.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Venados F.C.</string>
    <string name="nav_header_subtitle">By: Manuel Zavala</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_item">Home</string>
    <string name="statistics_item">Estadísticas</string>
    <string name="players_item">Jugadores</string>
    <string name="Forwards">Delanteros</string>
    <string name="Centers">Medios</string>
    <string name="Defenses">Defensas</string>
    <string name="GoalKeeper">Porteros</string>
    <string name="coaches_item">Cuerpo Técnico</string>
    <string name="group_team_menu">Equipo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
