<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/stats_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/table_position"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/image_team"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/team_name"
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistics_table"/>

                <TextView
                    android:id="@+id/games_played"
                    android:layout_width="33dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/games_played"/>

                <TextView
                    android:id="@+id/score_diff"
                    android:layout_width="33dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score_diff"/>

                <TextView
                    android:id="@+id/points"
                    android:layout_width="33dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/points"/>
            </TableRow>
        </TableLayout>

    </android.support.v7.widget.CardView>
