<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Views.Views.Fragments.StatisticsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/side_nav_bar"
            android:padding="3dp">

            <TableRow>

                <TextView
                    android:textColor="@color/colorWithe"
                    android:layout_width="253dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/statistics_table"/>

                <TextView
                    android:textColor="@color/colorWithe"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/games_played"/>

                <TextView
                    android:textColor="@color/colorWithe"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/score_diff"/>

                <TextView
                    android:textColor="@color/colorWithe"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/points"/>
            </TableRow>
        </TableLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:scrollbars="vertical"/>
    </LinearLayout>



</FrameLayout>